// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checked 1`] = `
<ds-field data-clickdelegatefor="components-switch--checked">
  <input
    role="switch"
    id="components-switch--checked"
    type="checkbox"
    checked
  >
  <label
    data-weight="regular"
    for="components-switch--checked"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Controlled 1`] = `
<fieldset>
  <legend
    id="components-switch--controlledlegend"
    data-weight="medium"
  >
    <h2>
      Innstillinger
    </h2>
  </legend>
  <ds-field>
    <input
      role="switch"
      id="components-switch--controlled"
      type="checkbox"
      checked
    >
    <label data-weight="regular">
      Varsler
    </label>
  </ds-field>
  <p
    data-variant="default"
    id="components-switch--controlleddescription"
  >
    Velg hvilke typer varsler du ønsker å motta.
  </p>
  <ds-field>
    <input
      id="components-switch--controlledlydvarsler"
      type="checkbox"
    >
    <label data-weight="regular">
      Lydvarsler
    </label>
  </ds-field>
  <ds-field>
    <input
      id="components-switch--controlledepostvarsler"
      type="checkbox"
      checked
    >
    <label data-weight="regular">
      Epostvarsler
    </label>
  </ds-field>
  <ds-field>
    <input
      id="components-switch--controlledpopupvarsler"
      type="checkbox"
    >
    <label data-weight="regular">
      Popup-varsler
    </label>
  </ds-field>
</fieldset>
`;

exports[`Description 1`] = `
<ds-field data-clickdelegatefor="components-switch--description">
  <input
    role="switch"
    id="components-switch--description"
    type="checkbox"
    checked
    aria-describedby="mn2xa67sm1a1"
  >
  <label
    data-weight="regular"
    for="components-switch--description"
  >
    Åpen prøve
  </label>
  <div
    data-field="description"
    id="mn2xa67sm1a1"
  >
    Prøven er åpen for alle som ønsker å delta.
  </div>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field>
  <input
    role="switch"
    disabled
    id="disabled-switch"
    type="checkbox"
  >
  <label data-weight="regular">
    Disabled switch
  </label>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="components-switch--focused">
  <input
    role="switch"
    id="components-switch--focused"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="components-switch--focused"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Group 1`] = `
<fieldset>
  <legend
    id="components-switch--grouplegend"
    data-weight="medium"
  >
    Varsler
  </legend>
  <ds-field>
    <input
      role="switch"
      id="components-switch--grouplydvarsler"
      type="checkbox"
      value="lydvarsler"
      checked
    >
    <label data-weight="regular">
      Lydvarsler
    </label>
    <div data-field="description">
      Spill av lyd når et varsel mottas.
    </div>
  </ds-field>
  <ds-field>
    <input
      role="switch"
      id="components-switch--grouppopup-varsler"
      type="checkbox"
      value="popup-varsler"
    >
    <label data-weight="regular">
      Popup-varsler
    </label>
    <div data-field="description">
      Vis popup-varsler på skjermen.
    </div>
  </ds-field>
  <ds-field>
    <input
      role="switch"
      id="components-switch--groupemail-varsler"
      type="checkbox"
      value="email-varsler"
    >
    <label data-weight="regular">
      E-postvarsler
    </label>
    <div data-field="description">
      Tillat e-postvarsler for viktige oppdateringer.
    </div>
  </ds-field>
</fieldset>
`;

exports[`Group End 1`] = `
<fieldset>
  <legend
    id="components-switch--group-endlegend"
    data-weight="medium"
  >
    <h2>
      Innstillinger
    </h2>
  </legend>
  <p
    data-variant="default"
    id="components-switch--group-enddescription"
  >
    Innstillinger som gjelder hele systemet.
  </p>
  <ds-field data-position="end">
    <input
      role="switch"
      id="components-switch--group-endmork-modus"
      type="checkbox"
      value="mork-modus"
      checked
    >
    <label data-weight="regular">
      Mørk modus
    </label>
  </ds-field>
  <ds-field data-position="end">
    <input
      role="switch"
      id="components-switch--group-endautomatiske-oppdateringer"
      type="checkbox"
      value="automatiske-oppdateringer"
    >
    <label data-weight="regular">
      Automatiske oppdateringer
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="components-switch--preview">
  <input
    role="switch"
    id="components-switch--preview"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="components-switch--preview"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field data-clickdelegatefor="readonly-switch">
  <input
    role="switch"
    readonly
    id="readonly-switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="readonly-switch"
  >
    Read-only switch
  </label>
</ds-field>
`;

exports[`Switch In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="switch-in-color-context">
    <input
      role="switch"
      id="switch-in-color-context"
      type="checkbox"
      checked
      aria-describedby="mn2xa67sm1a5"
    >
    <label
      data-weight="regular"
      for="switch-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="mn2xa67sm1a5"
    >
      Description
    </div>
  </ds-field>
</div>
`;
